--- a/setup/requirements.yml
+++ b/setup/requirements.yml
@@ -1,4 +1,4 @@
-name: adlr_new
+name: adlr
 channels:
   - pytorch
   - defaults
@@ -140,7 +140,7 @@ dependencies:
   - pip:
     - absl-py==0.12.0
     - alabaster==0.7.12
-    - ale-py
+    - ale-py==0.6.2+d7f80bd
     - alembic==1.6.2
     - apipkg==1.5
     - appdirs==1.4.4
@@ -262,4 +262,4 @@ dependencies:
     - typed-ast==1.4.3
     - werkzeug==1.0.1
     - wrapt==1.12.1
-prefix: /usr/local/anaconda3/envs/adlr_new
+prefix: /usr/local/anaconda3/envs/adlr
