--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "stable-baselines3"]
 	path = stable-baselines3
-	url = https://github.com/DLR-RM/stable-baselines3.git
+	url = git@github.com:Finn-Sueberkrueb/stable-baselines3.git
+[submodule "pybullet-gym"]
+	path = pybullet-gym
+	url = git@github.com:Finn-Sueberkrueb/pybullet-gym.git
 [submodule "rl-baselines3-zoo"]
 	path = rl-baselines3-zoo
-	url = https://github.com/marcelbrucker/rl-baselines3-zoo.git
+	url = git@github.com:Finn-Sueberkrueb/rl-baselines3-zoo.git
