--- a/docs/results/msac/MountainCarContinuous-v0_3_dynamicshift_max/MountainCarContinuous-v0/args.yml
+++ b/docs/results/msac/MountainCarContinuous-v0_3_dynamicshift_max/MountainCarContinuous-v0/args.yml
@@ -1,6 +1,6 @@
 !!python/object/apply:collections.OrderedDict
 - - - algo
-    - msac
+    - sac
   - - env
     - MountainCarContinuous-v0
   - - env_kwargs
@@ -12,7 +12,7 @@
   - - gym_packages
     - []
   - - hyperparams
-    - null
+    - reward_div: 0.1
   - - log_folder
     - logs
   - - log_interval
