some merge from dev/finn

--- a/docs/results/sac/LunarLanderContinuous-v2_1_dynamicshift_max/LunarLanderContinuous-v2/args.yml
+++ b/docs/results/sac/LunarLanderContinuous-v2_1_dynamicshift_max/LunarLanderContinuous-v2/args.yml
@@ -12,7 +12,7 @@
   - - gym_packages
     - []
   - - hyperparams
-    - null
+    - reward_div: 0.1
   - - log_folder
     - logs
   - - log_interval
