--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "stable-baselines3"]
 	path = stable-baselines3
 	url = git@github.com:DLR-RM/stable-baselines3.git
+[submodule "rl-baselines3-zoo"]
+	path = rl-baselines3-zoo
+	url = git@github.com:Finn-Sueberkrueb/rl-baselines3-zoo.git
+	branch = Munchausen
