--- a/docs/results/replay_log_prob/msac/HalfCheetahBulletEnv-v0_1_clip_-10_10/HalfCheetahBulletEnv-v0/args.yml
+++ b/docs/results/replay_log_prob/msac/HalfCheetahBulletEnv-v0_1_clip_-10_10/HalfCheetahBulletEnv-v0/args.yml
@@ -12,7 +12,8 @@
   - - gym_packages
     - []
   - - hyperparams
-    - munchausen_scaling: 0.1
+    - munchausen_clipping_high: 10.0
+      munchausen_clipping_low: -10.0
   - - log_folder
     - logs
   - - log_interval
